Fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,11 @@ form {
 }
 
 input {
-  width: 209px;
+  width: 193px;
 }
 
 #deckOneInput {
-  margin-right: 63px;
+  margin-right: 97px;
 }
 
 #deckOne {
